# pypfop

./: .gitignore  .hgignore  CHANGES  CHANGES.rst  LICENSE  LICENSE.txt  MANIFEST.in  README  README.rst  pyproject.toml  setup.py  tox.ini
examples/: helloworld.fo.mako  helloworld.py
examples/helloworld/: helloworld.fo.mako  helloworld.py
examples/simple_table/: simple-table.fo.mako  simple_table.py
examples/simple_table/css/: colors.css  general.css  simple_table.css
pypfop/: __init__.py  _document.py  _document_generator.py  _logging_setup.py  builder.py  compat.py  conversion.py  document_generator.py  exceptions.py  helpers.py  makotemplates.py  utils.py
pypfop/skeletons/mako/: A4-landscape.fo.mako  A4-portrait.fo.mako  base.fo.mako  letter-landscape.fo.mako  letter-portrait.fo.mako  simple-letter-base.fo.mako  single-page-base.fo.mako
pypfop/templates/: __init__.py  mako.py
tests/: test_builder.py  test_compat.py  test_conversion.py  test_document_generator.py  test_exceptions.py  test_logging.py  test_skeletons.py  test_templates.py  test_utils.py
