[tool.poetry]
name = "pypfop"
version = "1.0a1"
description = "Document preprocessor for Apache FOP"
authors = ["Joel Rivera <rivera@joel.mx>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/cyraxjoe/pypfop"
classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Topic :: Office/Business",
     "Topic :: Software Development :: Libraries",
     'Topic :: Text Processing :: Filters'
]
include = [
    "LICENSE.txt",
    "CHANGES.rst"
]

[tool.poetry.dependencies]
python = "^3.8"
Mako = "^1.2.2"
cssutils = "^1.0.2"
cssselect = "^1.1.0"
lxml = "^4.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
flake8 = "^3.8.4"
pytest-cov = "^5.0.0"
python-lsp-server = "^1.11.0"
tox-poetry-installer = {extras = ["poetry"], version = "^0.10.3"}
tox-pyenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
